--- a/section2/htmlpersonalsite/index.html
+++ b/section2/htmlpersonalsite/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dawn's Personal Site</title>
 </head>
 <body>
     
-</body>
+    <h1>Dawn Rose</h1>
+    <p><em>Training to take over the <strong>world</strong></em></p>
+    <p>After countless years of nagging by my better half, i am finally learning to program!</p>
+    <hr>
+    <h3>Education</h3>
+    <ul>
+        <li>Techmums 2020</li>
+        <li>Digital Skills:Mobile</li>
+        <li>An Introduction To Coding And Design</li>
+        <li>Create A Great User Experience For Mobile Apps </li>
+        <li>Learn To Code For The Web</li>
+        <li>Introduction To HTML And CSS</li>
+    </ul>
+    <h3> Hobbies</h3>
+    <ol>
+        <li>Cooking</li>
+        <li>Cake Decorating</li>
+        <li>Reading</li>
+    </ol> 
+
+
+
+
+
+
+</body> 
 </html>
