--- a/section2/htmlpersonalsite/index.html
+++ b/section2/htmlpersonalsite/index.html
@@ -24,7 +24,7 @@
     <ol>
         <li>Cooking</li>
         <li>Cake Decorating</li>
-        <li>Reading</li>
+        <li>Reading Fiction</li>
     </ol> 
 
 
