--- a/section2/Section2playbook.html
+++ b/section2/Section2playbook.html
@@ -1,4 +1,4 @@
-<!-- Playbook for Web Development Bootcamp Section 2 -->
+<!-- Playbook for Web Development Bootcamp Section 2 Introduction to HTML -->
 
 <!--Headers-->
 
