new files and updated code

--- a/section2introhtml/Section2playbook.html
+++ b/section2introhtml/Section2playbook.html
@@ -34,5 +34,16 @@
         <li>number 1</li>
         <li>number 2</li>
     </ol>
+    <!--Image tags <img src= "name of image.png"> are self closing-->
+    <!-- Adding Hyperlinks-->
+    <a href="https://techmums.co/">Techmums 2020</a>
+    <br>
+
+    <!-- adding new pages: right click on your page diretory and add a new file then add hyperlinks on your index page to the b=new pages-->
+
+    <a href="hobbies.html">My Hobbies</a>
+    <br>
+    <a href="contact.html">Contact me</a>
+
 </body>
 </html>
