--- a/section2introhtml/htmlpersonalsite/index.html
+++ b/section2introhtml/htmlpersonalsite/index.html
@@ -8,24 +8,23 @@
 <body>
     
     <h1>Dawn Rose</h1>
+    <img src="dawnimge.gif" alt="image of dawn rose"
+   <br>
     <p><em>Training to take over the <strong>world</strong></em></p>
     <p>After countless years of nagging by my better half, i am finally learning to program!</p>
     <hr>
     <h3>Education</h3>
     <ul>
-        <li>Techmums 2020</li>
+        <li> <a href="https://techmums.co/">Techmums 2020</a></li>
         <li>Digital Skills:Mobile</li>
         <li>An Introduction To Coding And Design</li>
         <li>Create A Great User Experience For Mobile Apps </li>
         <li>Learn To Code For The Web</li>
-        <li>Introduction To HTML And CSS</li>
+        <li> <a href="https://classroom.udacity.com/me">Introduction To HTML And CSS</a></li>
     </ul>
-    <h3> Hobbies</h3>
-    <ol>
-        <li>Cooking</li>
-        <li>Cake Decorating</li>
-        <li>Reading Fiction</li>
-    </ol> 
+    <a href="hobbies.html">My Hobbies</a>
+    <br>
+    <a href="contact.html">Contact me</a>
 
 
 
