--- a/section3interhtml/htmlpersonalsitesec3/section3playbook.html
+++ b/section3interhtml/htmlpersonalsitesec3/section3playbook.html
@@ -30,3 +30,14 @@
 
     </tbody>
 </table>
+
+<!-- PLacing image and decription in a table to format and add spacing between-->
+<table cellspacing="20">
+    <tr>
+        <td><img src="dawnimge.gif" alt="image of dawn rose"></td>
+        <td><h1>Dawn Rose</h1>
+
+            <p><em>Training to take over the <strong>world</strong></em></p>
+            <p>After countless years of nagging from my better half, i am finally learning to program!</p></td>
+    </tr>
+</table>
