--- a/section3interhtml/htmlpersonalsitesec3/section3playbook.html
+++ b/section3interhtml/htmlpersonalsitesec3/section3playbook.html
@@ -41,3 +41,26 @@
             <p>After countless years of nagging from my better half, i am finally learning to program!</p></td>
     </tr>
 </table>
+<!--split table with emojis-->
+<table cellspacing="20">
+    <hr>
+    <h3>Skills</h3>   
+      <thead>
+          
+      </thead>
+      <tbody>
+          <tr>
+              <td>Cooking</td>
+              <td>&#x1f609;&#x1f609;&#x1f609;&#x1f609;</td>
+              <td>Baking</td>
+              <td>&#x1f609;&#x1f609;&#x1f609;&#x1f609;</td>
+          </tr>
+          <tr>
+              <td>Cake Decorating</td>
+              <td>&#x1f609;&#x1f609;&#x1f609;&#x1f609;</td>
+              <td>Web Development</td>
+              <td>&#x1F60E;</td>
+          </tr>
+          </div>
+      </tbody>
+  </table>
