--- a/section3interhtml/section3playbook.html
+++ b/section3interhtml/section3playbook.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     
-</body>
-</html>
+
 <!--Tables-->
+<h2>Tables</h2>
+<h3>Simple Table</h3>
 <table>
     <thead>
         <tr>
@@ -32,6 +33,7 @@
 </table>
 
 <!-- PLacing image and decription in a table to format and add spacing between-->
+<h3>Formatting web content in a table</h3>
 <table cellspacing="20">
     <tr>
         <td><img src="dawnimge.gif" alt="image of dawn rose"></td>
@@ -42,6 +44,7 @@
     </tr>
 </table>
 <!--split table with emojis-->
+<h3>Side by side table with emojis</h3>
 <table cellspacing="20">
     <hr>
     <h3>Skills</h3>   
@@ -64,3 +67,39 @@
           </div>
       </tbody>
   </table>
+  <!--HTML Forms-->
+  <!--Simple form with input box,colour picker and check box-->
+  <h3>Form with check box, colour picker and input box</h3>
+  <form class="" action="index3.html" method="POST">
+    <label>Your Name</label>
+    <input type="text"name="value=">
+    <input type="color" name="value">
+    <br>
+    <label for="">Do you wish to sign up to the email list?</label>
+    <input type="checkbox" name="value">
+    <input type="submit" name="">
+
+    <!--Simple form with password input, date picker, file upload, radio and range slider-->
+    <h3>Form with date picker, radio, file upload</h3>
+    <input type="text"><br>
+    <input type="submit"><br>
+    <input type="file" name="" id=""><br>
+    <input type="radio" name="" id=""><br>
+    <input type="range" name="" id=""><br>
+    <input type="date" name="" id="">
+
+<!--contact form with mailto capacity-->
+<h3>Contact form with mailto capacity</h3>
+<form action="mailto:tastethedream@gmail.com" method="POST" enctype="text/plain">
+    <label>Your Name</label>
+    <input type="text"name="Your name" value="">
+    <br>
+    <label>Your email</label>
+    <input type="email" name="Your email" value=""><br>
+    <label>Your Message</label><br>
+    <textarea name="Your message" id="" cols="30" rows="10"></textarea>
+    <input type="submit" name="">
+</form>
+
+</body>
+</html>
