--- a/section4introcss/index4.html
+++ b/section4introcss/index4.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dawn's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body style="background-color: #cff1ef ;">
+<body>
     <table cellspacing="20">
         <tr>
-            <td><img src="dawnimge.gif" alt="image of dawn rose"></td>
+            <td><img src="images/dawnimge.gif" alt="image of dawn rose"></td>
             <td><h1>Dawn Rose</h1>
     
                 <p><em>Training to take over the <strong>world</strong></em></p>
