--- a/section4introcss/section4playbook.html
+++ b/section4introcss/section4playbook.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
     <h1>Section 4 Playbook</h1>
+    <h3>internal CSS changing the background colour using inline CSS</h3>
+    <style>
+        body {
+            background-color: #D1F5D3;
+            }
+            
+
+    </style>
 </body>
 </html>
