--- a/section6bootstrap/index.html
+++ b/section6bootstrap/index.html
@@ -4,10 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
+
+ <!--Google Fonts--> 
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+  
+  <!--CSS Stylesheets-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 
+  <!--Font Awesome-->
+  <script src="https://kit.fontawesome.com/3cfa53efe3.js" crossorigin="anonymous"></script>
 
+<!--Bootstrap Scripts-->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -18,9 +26,12 @@
 <body>
 
   <section id="title">
+    <div class="container-fluid">
+
+      
 
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="">tindog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -43,18 +54,21 @@
         </div>
     </nav>
 
-
-
     <!-- Title -->
+    <!-- Download Buttons -->
 
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+    <div class="row">
+        <div class="col-lg-6">
+        <h1>Meet new and interesting dogs nearby.</h1>
+         <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg down-load-button"><i class="fab fa-google-play"></i> Download</button>
     </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
+
+
+    <div class="col-lg-6">
+      <img class="title-image"src="images/iphone6.png" alt="iphone-mockup">
     </div>
+</div>
 
   </section>
 
