--- a/section10/DOM/index10.html
+++ b/section10/DOM/index10.html
@@ -10,8 +10,19 @@
 <body>
     <h1>Hello</h1>
 
+    <input type="checkbox">
+
+    <button style= ":active: color:red;">Click Me</button>
+
+    <ul>
+        <li class= "list">
+            <a href="https://google.com">Google</a>
+        </li>
+        <li class="list">Second</li>
+        <li class="list"> Third</li>
+    </ul>
     
     
-    <script src="index.js" charset="utf-8"> </script>
+    <script src="index.js" charset="utf-8"></script>
 </body>
 </html>
