--- a/section10/DOM/index10.html
+++ b/section10/DOM/index10.html
@@ -8,18 +8,16 @@
 </head>
 
 <body>
-    <h1>Hello</h1>
-
+    <h1 id="title">Hello</h1>
+    <a href="https://google.com">Google</a>
     <input type="checkbox">
 
-    <button style= ":active: color:red;">Click Me</button>
+    <button class="btn">Click Me</button>
 
-    <ul>
-        <li class= "list">
-            <a href="https://google.com">Google</a>
-        </li>
-        <li class="list">Second</li>
-        <li class="list"> Third</li>
+    <ul id="list">
+        <li class= "item"><a href="https://google.com">Google</a></li>
+        <li class="item">Second</li>
+        <li class="item"> Third</li>
     </ul>
     
     
